--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
         }
     },
     "plugins":  [
+        "flow-react-proptypes",
         "transform-flow-strip-types",
         "transform-class-properties",
         "transform-decorators-legacy",
