--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,19 @@
 {
-    "presets": ["env", "react", "flow"],
-    "env": {
-        "development": {
-            "presets": ["react-hmre"]
-        }
-    },
-    "plugins":  [
-        "flow-react-proptypes",
-        "transform-flow-strip-types",
-        "transform-class-properties",
-        "transform-decorators-legacy",
-        "transform-react-jsx-source"
+    "presets": [
+        "@babel/preset-env",
+        "@babel/preset-react",
+        "@babel/preset-flow"
+    ],
+    "plugins": [
+        "react-hot-loader/babel",
+        "@babel/plugin-transform-flow-strip-types",
+        "@babel/plugin-proposal-class-properties",
+        [
+            "@babel/plugin-proposal-decorators",
+            {
+                "legacy": true
+            }
+        ],
+        "@babel/plugin-transform-react-jsx-source"
     ]
 }
