--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
 	"author": ".modernator",
 	"license": "MIT",
 	"devDependencies": {
-		"babel-core": "^6.26.3",
-		"babel-loader": "^7.1.4",
-		"babel-plugin-flow-react-proptypes": "^24.1.2",
-		"babel-plugin-transform-class-properties": "^6.24.1",
-		"babel-plugin-transform-decorators-legacy": "^1.3.4",
-		"babel-plugin-transform-flow-strip-types": "^6.22.0",
-		"babel-plugin-transform-react-jsx-source": "^6.22.0",
-		"babel-polyfill": "^6.26.0",
-		"babel-preset-env": "^1.6.1",
-		"babel-preset-flow": "^6.23.0",
-		"babel-preset-react": "^6.24.1",
-		"babel-preset-react-hmre": "^1.1.1",
+		"@babel/cli": "^7.0.0",
+		"@babel/core": "^7.0.0",
+		"@babel/plugin-proposal-class-properties": "^7.0.0",
+		"@babel/plugin-proposal-decorators": "^7.0.0",
+		"@babel/plugin-transform-flow-strip-types": "^7.0.0",
+		"@babel/plugin-transform-react-jsx-source": "^7.0.0",
+		"@babel/preset-env": "^7.0.0",
+		"@babel/preset-flow": "^7.0.0",
+		"@babel/preset-react": "^7.0.0",
+		"@hot-loader/react-dom": "^16.8.6",
+		"babel-loader": "^8.0.0",
 		"clean-webpack-plugin": "^0.1.19",
+		"core-js": "^3.0.1",
 		"css-loader": "^2.1.1",
 		"css-module-flow": "^1.0.0",
 		"flow-bin": "^0.69.0",
@@ -45,8 +45,9 @@
 		"mini-css-extract-plugin": "^0.4.0",
 		"node-sass": "^4.12.0",
 		"prop-types": "^15.6.2",
-		"react": "^16.3.0",
-		"react-dom": "^16.3.0",
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
+		"react-hot-loader": "^4.8.4",
 		"react-redux": "^5.0.7",
 		"redux": "^3.7.2",
 		"sass-loader": "^6.0.7",
