--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"build-analyze": "BUILD_ANALYZE=1 webpack --mode production --progress --config webpack.prod.js --profile --json > prod-result.json",
 		"build-prod": "webpack --mode production --progress --config webpack.prod.js",
 		"dev": "webpack-dev-server --mode development --open --progress --inline",
-		"flow": "flow"
+		"flow": "flow",
+		"start": "npm run build-prod && npm run serve",
+		"serve": "node server"
 	},
 	"repository": {
 		"type": "git",
@@ -39,6 +41,7 @@
 		"core-js": "^3.0.1",
 		"css-loader": "^2.1.1",
 		"css-module-flow": "^1.0.0",
+		"file-loader": "^3.0.1",
 		"flow-bin": "^0.69.0",
 		"html-loader": "^0.5.5",
 		"html-webpack-plugin": "^3.1.0",
@@ -52,6 +55,7 @@
 		"redux": "^3.7.2",
 		"sass-loader": "^6.0.7",
 		"style-loader": "^0.20.3",
+		"url-loader": "^1.1.2",
 		"webpack": "^4.4.1",
 		"webpack-bundle-analyzer": "^3.3.2",
 		"webpack-cli": "^3.1.1",
